<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Get Volvd</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_trending">Trending</string>
    <string name="title_links">Important Links</string>
    <string name="currently_on">Now On</string>
    <string name="network_unavailable">No network connection available.</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="facebook_app_id">286667115186661</string>
    <string name="fb_login_protocol_scheme">fb286667115186661</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_clubs">ClubsActivity</string>
    <string name="societies_title">Societies in UCD</string>
    <string name="title_activity_societies">SocietiesActivity</string>
    <string name="not_yet_available">Now on (not yet implemented)…</string>
    <string name="volve_title_main">Volve</string>
    <string name="intro_text">Welcome to Volve: the app that brings all the events around campus in one place at your fingertips!!</string>
    <string name="links_button">Useful Links</string>
    <string name="societies_button">UCD Societies</string>
    <string name="clubs_button">UCD Clubs</string>
    <string name="connect_to_GMS">Connect to UCD Connect Account to sync your lecture Calendar</string>
    <string name="appId">286667115186661</string>
    <string name="campus.ie" tools:ignore="ExtraTranslation">Campus.ie</string>
    <string name="infoview.ucd" tools:ignore="ExtraTranslation">UCD InfoView</string>
    <string name="careers.connect.ucd" tools:ignore="ExtraTranslation">Careers Connect UCD</string>
    <string name="su.ucd" tools:ignore="ExtraTranslation">UCD SU</string>
    <string name="connect.ucd" tools:ignore="ExtraTranslation">UCD Connect</string>
    <string name="registry.ucd" tools:ignore="ExtraTranslation">UCD Registry</string>
    <string name="student.support.ucd" tools:ignore="ExtraTranslation">UCD Student Support</string>
    <string name="unicare.ucd" tools:ignore="ExtraTranslation">UCD UniCare</string>
    <string name="maps.ucd" tools:ignore="ExtraTranslation">UCD Campus Maps</string>
    <string name="sisweb">SisWeb</string>
    <string name="library.ucd" tools:ignore="ExtraTranslation">UCD Library</string>
    <string name="moodle.cs.ucd" tools:ignore="ExtraTranslation">CS Moodle</string>
    <string name="official.website.ucd" tools:ignore="ExtraTranslation">UCD Official Website</string>
    <string name="societies.ucd" tools:ignore="ExtraTranslation">UCD Societies</string>
    <string name="now.on" tools:ignore="ExtraTranslation">Now On!</string>
    <string name="sisweb.url" tools:ignore="ExtraTranslation">sisweb.ucd.ie</string>
    <string name="library.url" tools:ignore="ExtraTranslation">http://www.ucd.ie/library/</string>
    <string name="campusIE.url" tools:ignore="ExtraTranslation">campus.ie/</string>
    <string name="infoview.url" tools:ignore="ExtraTranslation">https://infoview.ucd.ie/</string>
    <string name="careersconnect.url" tools:ignore="ExtraTranslation">careersconnect.ucd.ie/home.html</string>
    <string name="IT.services.url" tools:ignore="ExtraTranslation">www.ucd.ie/itservices/</string>
    <string name="ucdsu.url" tools:ignore="ExtraTranslation">ucdsu.ie/</string>
    <string name="ucdconnect.url" tools:ignore="ExtraTranslation">https://www.ucd.ie/connect/</string>
    <string name="registry.url" tools:ignore="ExtraTranslation">http://www.ucd.ie/registry/</string>
    <string name="support.url" tools:ignore="ExtraTranslation">www.ucd.ie/students/support/</string>
    <string name="unicare.url" tools:ignore="ExtraTranslation">ucdestates.ie/unicare/</string>
    <string name="csmoodle.url" tools:ignore="ExtraTranslation">csmoodle.ucd.ie/</string>
    <string name="ucd.url" tools:ignore="ExtraTranslation">www.ucd.ie/</string>
    <string name="societiesUCD.url" tools:ignore="ExtraTranslation">societies.ucd.ie/</string>
    <string name="unicare_phone_n">+353017167999</string>
    <string name="app.loading_pls.wait" tools:ignore="ExtraTranslation">Application Loading. Please wait…</string>
    <string name="error.occurred" tools:ignore="ExtraTranslation">The following error occurred:</string>
    <string name="request.cancelled" tools:ignore="ExtraTranslation">Request cancelled.</string>
    <string name="data.retrieved.with.cal.API" tools:ignore="ExtraTranslation">Data retrieved using the Google Calendar API:</string>
    <string name="no.results" tools:ignore="ExtraTranslation">No results returned.</string>
    <string name="play.services.required" tools:ignore="ExtraTranslation">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="access.google.account.required" tools:ignore="ExtraTranslation">This app needs to access your Google account to sync with Google Calendar.</string>
    <string name="calling.gCal.api" tools:ignore="ExtraTranslation">Calling Google Calendar API …</string>
    <string name="FB.login" tools:ignore="ExtraTranslation">Login with Facebook</string>
    <string name="hash">KeyHash:</string>
    <string name="failed.login.fb" tools:ignore="ExtraTranslation">Login attempt failed.</string>
    <string name="fb.logout" tools:ignore="ExtraTranslation">Logout from Facebook</string>
    <string name="dob">Date Of Birth</string>
    <string name="fb.login" tools:ignore="ExtraTranslation">FB Login</string>
    <string name="login.error.fb" tools:ignore="ExtraTranslation">Login Error</string>
    <string name="login.cancelled.fb" tools:ignore="ExtraTranslation">Login Cancelled</string>
    <string name="login.successful.summary.one" tools:ignore="ExtraTranslation">Login Successful:</string>
    <string name="id.user.login.fb.summary" tools:ignore="ExtraTranslation">User ID:</string>
    <string name="authentication.token.fb.login" tools:ignore="ExtraTranslation">Auth Token: \"</string>
    <string name="ucd.estates.url" tools:ignore="ExtraTranslation">ucdestates.ie/information/ucd-maps/</string>
    <string name="useful.links.title" tools:ignore="ExtraTranslation">Useful Links</string>
    <string name="empty.TextView.LinksActivity" tools:ignore="ExtraTranslation">This text will not be displayed.</string>
    <string name="title_activity_choose_society">ChooseSocietyActivity</string>
    <string name="social.media.login" tools:ignore="ExtraTranslation">Login with social media</string>
    <string name="login_error">Error during login</string>
    <string name="login.scree.title" tools:ignore="ExtraTranslation">Login to Volve</string>
    <string name="societies.label" tools:ignore="ExtraTranslation">Societies in UCD</string>
    <string name="clubs.label" tools:ignore="ExtraTranslation">Clubs in UCD!</string>
    <string name="choose.society" tools:ignore="ExtraTranslation">Choose a society</string>
    <string name="choose.society.btnText" tools:ignore="ExtraTranslation">Choose a society</string>
    <string name="about.us.text" tools:ignore="ExtraTranslation">We are university students just like you! We have developed this app from scratch for your benefit and hope you enjoy using it!</string>
    <string name="title_activity_main_frame">MainOpeningFrame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_opening_screen">Volve</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_choose_society">Photos</string>
    <string name="nav_choose_club">Movies</string>
    <string name="nav_login">Notifications</string>
    <string name="nav_about_us">About Us</string>
    <string name="ChoseEmailClient">Choose the email program</string>
    <string name="links.title" tools:ignore="ExtraTranslation">Useful Tips!</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Choose Society</item>
        <item>Choose Club</item>
        <item>Login</item>
        <item>About Us</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firebase_url"> https://volve-ucd.firebaseio.com/</string>
    <string name="all_events_tab">All Events</string>
    <string name="clubs_tab">Clubs</string>
    <string name="societies_tab">Societies</string>
    <string name="su_tab">SU</string>
    <string name="what">WHAT:</string>
    <string name="when">WHEN:</string>
    <string name="where">WHERE:</string>
    <string name="url_placeholder">URL:</string>
</resources>