<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="15dp"
    card_view:contentPadding= "5dp"
    card_view:cardUseCompatPadding="true"
    android:orientation="horizontal"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView_contact"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/pic1"
           />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:ignore="UselessParent">

            <!-- what -->
            <TextView
                android:id="@+id/what"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/what"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- when -->
            <TextView
                android:id="@+id/when"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/when"
                android:textColor="#dd5d7a"
                tools:ignore="RtlHardcoded" />

            <!-- where -->
            <TextView
                android:id="@+id/where"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/where"
                android:textColor="#f0ad1a"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/url_placeholder"
                tools:ignore="RtlHardcoded" />
            <!-- description -->
            <TextView
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <!--<RatingBar-->
                <!--android:id="@+id/ratingBar"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="25dp"-->
                <!--android:isIndicator="true"-->
                <!--android:numStars="5"-->
                <!--android:rating="1"-->
                <!--android:stepSize="1"-->
                <!--style="?android:attr/ratingBarStyleSmall"-->
                <!--/>-->

        </LinearLayout>
</LinearLayout>


</android.support.v7.widget.CardView>